--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-25  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/config/ltmain.m4sh (link mode): Pass through -isysroot
+	for cross architecture builds on darwin.
+
 2005-11-24  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/config/ltmain.m4sh (func_mode_uninstall): In clean
