--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-11-25  Charles Wilson  <cygwin@cwilson.fastmail.fm>,
+	    Peter Ekberg  <peda@lysator.liu.se>,
+	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (generate dlsyms): Backport of func_generate_dlsyms
+	fixes from HEAD.
+
 2005-11-25  Charles Wilson  <cygwin@cwilson.fastmail.fm>
 
 	* ltmain.in (link mode): add foo/bin for every foo/lib in
