--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-26  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/m4/libtool.m4 [darwin]: Use $LTCC $LTCFLAGS to create
+	reloadable objects.
+
 2005-11-25  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/Makefile.inc (libltdl/argz.h): Create libltdl
