--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-03  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (func_extract_archives, compile mode, link mode):
+	Use `$exit_status' rather than forbidden `$status'.
+
 2005-11-28  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* ltmain.in: Fix typo introduced in dllsearchpath backport.
