Basic support for PIE (position-independent executables).
* libltdl/config/ltmain.m4sh (func_generate_dlsyms):
Don't pass PIE flag for compilation of the symbol file object.
* NEWS: Updated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,18 @@
 2005-12-03  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
-	* libltdl/config/general.m4sh (func_show_eval):
-	Rewrite use the failure expression, because the exit status of
-	the previous command may not be preserved in the next `eval' by
-	some shells, such as pdksh.
+	Basic support for PIE (position-independent executables).
+
+	* libltdl/config/ltmain.m4sh (func_generate_dlsyms):
+	Don't pass PIE flag for compilation of the symbol file object.
+	(func_mode_compile): Pass PIE flag only for non-PIC objects.
+	* NEWS: Updated.
+
+2005-12-03  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/config/general.m4sh (func_show_eval): Rewrite use of
+	the failure expression, because the exit status of the previous
+	command may not be preserved in the next `eval' by some shells,
+	such as pdksh.
 	* libltdl/config/ltmain.m4sh (func_extract_an_archive):
 	Use func_show_eval correctly.
 	(func_mode_link): Likewise.  Also, do not use `$status'.
