--- a/NEWS
+++ b/NEWS
@@ -29,6 +29,7 @@ New in 1.9h: 2005-??-??; CVS version 2.1a, Libtool team:
 * Fixed a branch-1-5/HEAD regression to only link uninstalled libraries
   statically with `-static'.
 * Support for Interix 3 (Windows SFU).
+* Basic support for PIE (position-independent executables).
 * Bug fixes.
 
 New in 1.9f: 2004-10-23; CVS version 1.9e, Libtool team:
