* libtoolize.m4sh (func_copy_cb, func_copy_some_files) (func_serial_update, func_keyword_update): Fail immediately if some file we may install does not exist. Reported by Troy Benjegerdes <hozer@hozed.org>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-12-04  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libtoolize.m4sh (func_copy_cb, func_copy_some_files)
+	(func_serial_update, func_keyword_update): Fail immediately
+	if some file we may install does not exist.
+	Reported by Troy Benjegerdes <hozer@hozed.org>.
+
 2005-12-03  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* TODO: A bunch of items fixed. :)
