--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -4981,8 +4981,8 @@ The following is a list of valuable documentation references:
 
 @itemize @bullet
 @item
-SGI's IRIX Manual Pages can be found at
-@url{http://techpubs.sgi.com/cgi-bin/@/infosrch.cgi?cmd=browse&db=man}.
+SGI's IRIX Manual Pages can be found at@*
+@url{http://techpubs.sgi.com/cgi-bin/infosrch.cgi?cmd=browse&db=man}.
 
 @item
 Sun's free service area
@@ -4990,10 +4990,10 @@ Sun's free service area
 server (@url{http://docs.sun.com/}).
 
 @item
-Compaq's Tru64 UNIX online documentation is at
-(@url{http://tru64unix.compaq.com/@/faqs/publications/pub_page/doc_list.html})
-with C++ documentation at
-(@url{http://tru64unix.compaq.com/@/cplus/docs/index.htm}).
+Compaq's Tru64 UNIX online documentation is at@*
+(@url{http://tru64unix.compaq.com/faqs/publications/pub_page/doc_list.html})
+with C++ documentation at@*
+(@url{http://tru64unix.compaq.com/cplus/docs/index.htm}).
 
 @item
 Hewlett-Packard has online documentation at
