--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-12-07  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/config/ltmain.m4sh, libltdl/m4/libtool.m4 [darwin]:
+	Use -single_module by default when linking shared libraries. Can
+	be overridden by specifying -multi-module or by setting the env
+	var LT_MULTI_MODULE before configure.
+	* libltdl/m4/libtool.m4 (archive_expsyms_cmds) [darwin]:
+	Simplify.
+	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
 2005-12-04  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* doc/libtool.texi (References): Do not use `@/' for the benefit
