--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-08  Eric Blake  <ebb9@byu.net>
+
+	* libltdl/libltdl/lt__alloc.h (FREE): Cast away constness of
+	argument to `free' to avoid compiler warning.
+
 2005-12-08  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/m4/libtool.m4 (_LT_LANG_CXX_CONFIG, _LT_LINKER_SHLIBS)
