--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-13  Peter O'Gorman  <peter@pogma.com>
+
+	* ltmain.in [darwin]: Don't add -framework. -arch, -isysroot
+	to $compiler_flags if already in $CC with same arguments.
+
 2005-12-07  Marc Espie  <espie@nerim.net>
 
 	* ltmain.in: Preserve both parts of `--tag TAG', for
