* Makefile.am (libltdl/Makefile.in): also depend on libltdl/aclocal.m4, so that we guarantee timestamp consistency. (libltdl/stamp-mk): New target, to fix `libltdl/Makefile.in'. (EXTRA_DIST): Distribute `libltdl/stamp-mk'. (all-local): Ensure the stamp files is up to date. (libltdl/aclocal.m4): New target, to ensure timestamp consistency.  Depend on all m4 files. * HACKING: Updated.

--- a/HACKING
+++ b/HACKING
@@ -192,6 +192,14 @@ yyyy-mm-dd  Name of Author  <email@address>  (tiny change)
 * In general, if a loop is required, it should be silent.  Then the body
   of the loop itself should print each "important" command it runs.
 
+* Use 4 extra spaces to indent continued dependencies.
+
+* One needs to remember that for our whole logic for the different
+  libltdl modes to function correctly, the thing we need to ensure
+  *before the client runs libtoolize*, is that the subpackage case is
+  correct (because all files may be symlinked there).  All others can
+  and will be fixed in the `libtoolize --ltdl --(non)recursive' stage.
+
 
 7. Editing `.m4sh' Files
 ========================
