--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2005-12-16  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* Makefile.am (libltdl/Makefile.in): also depend on
+	libltdl/aclocal.m4, so that we guarantee timestamp consistency.
+	(libltdl/stamp-mk): New target, to fix `libltdl/Makefile.in'.
+	(EXTRA_DIST): Distribute `libltdl/stamp-mk'.
+	(all-local): Ensure the stamp files is up to date.
+	(libltdl/aclocal.m4): New target, to ensure timestamp
+	consistency.  Depend on all m4 files.
+	* HACKING: Updated.
+
 	* tests/testsuite.at (PREPARE_TESTS): New variable `tst_dist',
 	default to empty.
 	* tests/nonrecursive.at, tests/recursive.at,
