--- a/README
+++ b/README
@@ -28,55 +28,77 @@ doc/PLATFORMS) for a list of platforms that libtool supports.
 2. Reporting Bugs
 =================
 
-If you have any suggestions or bug reports, or you wish to port
-libtool to a new platform, please send electronic mail to the libtool
-mailing list <libtool@gnu.org> or bug reports to <bug-libtool@gnu.org>.
-Be sure to send us your information from the end of the help message
-given by `./libtool --help'.
+If you have any suggestions or bug reports, or you wish to port libtool
+to a new platform, please send electronic mail to the libtool mailing
+list <libtool@gnu.org> or bug reports to <bug-libtool@gnu.org>.  Be sure
+to send us your information from the end of the help message given by
+`./libtool --help'.
 
 
-3. The Test Suite
-=================
+3. The Test Suites
+==================
 
-Libtool comes with an integrated set of tests to check that your build
-is sane.  You can run the entire suite like this:
+Libtool comes with two integrated sets of tests to check that your build
+is sane.  You can run both test suites like this:
 
-  make check
+  make check TESTSUITE_FLAGS=-V
+  make check-local
 
-The tests run in groups in the various demo subdirectories, so if one
-of the tests early in a group FAILs, the rest of the tests in that
-group will be SKIPPED.  If you see a FAIL further into a group, even
-if a test with the same name PASSes in another test group, you need to
-take note of the name of the first test in the group if you want to
-rerun the group with FAILures to get verbose output.
+The tests of the old test suite run in groups in the various demo
+subdirectories, so if one of the tests early in a group FAILs, the rest
+of the tests in that group will be SKIPped.  If you see a FAIL further
+into a group, even if a test with the same name PASSes in another test
+group, you need to take note of the name of the first test in the group
+if you want to rerun the group with FAILures to get verbose output.
 
-To run a test group in isolation (say, you think you have fixed a bug,
-but don't want to rerun the entire suite), you can do it like this:
+To run a test group of the old test suite in isolation (say, you think
+you have fixed a bug, but don't want to rerun the entire suite), you can
+do it like this:
 
-  make check TESTS='cdemo-static.test cdemo-make.test cdemo-exec.test'
+  make check TESTS='cdemo-static.test cdemo-make.test cdemo-exec.test' \
+	     TESTSUITE_FLAGS=-V
 
 Providing that you have a FAIL from the most recent group from a
 particular demo directory (like the cdemo-static.test group above), you
 can explore the state of the directory to help with debugging.
 
-If you wish to report a test group failure to the libtool list, you
-need to send the verbose output of the FAILing group, along with the
-information from the end of `$(top_builddir)/libtool --help' to the
-bug report mailing list, <bug-libtool@gnu.org>.  From a Bourne
-compatible shell, you can generate verbose test output like this:
+If you wish to report a test group failure to the libtool list, you need
+to send the verbose output of the FAILing group, along with the
+information from the end of `$(top_builddir)/libtool --help' to the bug
+report mailing list, <bug-libtool@gnu.org> with a subject line that
+includes the string `[TEST FAILURE]'.  From a Bourne compatible shell,
+you can generate verbose test output like this:
 
   VERBOSE=yes make check \
   TESTS='cdemo-static.test cdemo-make.test cdemo-exec.test' \
-  | tee cdemo-static-group.log
+  TESTSUITE_FLAGS=-V | tee cdemo-static-group.log
 
-In order to enable debug shell tracing, use VERBOSE=debug
-instead of VERBOSE=yes.
+In order to enable debug shell tracing, use VERBOSE=debug instead of
+VERBOSE=yes.
+
+
+In the long run, Libtool will move to using only the new,
+Autotest-driven testsuite.  Its usage is documented in
+
+  info Autoconf 'testsuite Invocation'
+
+but simple help may also be obtained through
+
+  make check-local TESTSUITE_FLAGS='--help'
+
+For verbose output, add the flag `-v', for running only a subset of the
+independent tests, merely specify them by number or by keyword, both of
+which are displayed with the `--list' flag.
+
+If you wish to report test failures to the libtool list, you need to
+send the file `tests/testsuite.log' to the bug report mailing list,
+<bug-libtool@gnu.org>.
 
 4. Version Numbering
 ====================
 
-People have complained that they find the version numbering scheme
-under which libtool is released confusing... so we've changed it!
+People have complained that they find the version numbering scheme under
+which libtool is released confusing... so we've changed it!
 
 It works like this:
 
