--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-18  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_LANG_CXX_CONFIG)
+	<hardcode_shlibpath_var>: Initialize, to `unsupported'.
+
 2005-12-18  Marc Espie  <espie@nerim.net>
 
 	* libltdl/m4/libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER)
