--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-12-18  Jacob Meuser <jakemsr@jakemsr.com>,
+	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (link mode): Move library search paths that coincide
+	with paths to not yet installed libraries to the beginning of
+	the library search list.
+
 2005-12-18  Kean Johnston  <jkj@sco.com>,
 	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
