--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-18  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/config/ltmain.m4sh <preserve_args, linknames>:
+	Initialize properly.
+
 2005-12-18  Kean Johnston  <jkj@sco.com>,
 	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
