--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-12-18  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (func_mktempdir): New, backported from HEAD.
+	(relink mode): Use it.  Fixes potential denial of service
+	through malicious other local user.
+	Reported by James Kosin <jkosin@intcomgrp.com>.
+
 2005-12-18  Peter O'Gorman  <peter@pogma.com>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
