--- a/THANKS
+++ b/THANKS
@@ -85,6 +85,7 @@
   H.J. Lu			hjl@gnu.org
   Howard Chu			hyc@highlandsun.com
   Ian Lance Taylor		ian@cygnus.com
+  Jacob Meuser			jakemsr@jakemsr.com
   Jeff Squyres			jsquyres@lam-mpi.org
   Joel N. Weber II		devnull@gnu.org
   Joseph Beckenbach III		jrb3@best.com
@@ -92,6 +93,7 @@
   Kevin Ryde			user42@zip.com.au
   Kurt D. Zeilenga		Kurt@OpenLDAP.Org
   Manfred Weichel		Manfred.Weichel@pdb.siemens.de
+  Marc Espie			espie@nerim.net
   Marc J. Fraioli		fraioli@dg-rtp.dg.com
   Mark Kettenis			kettenis@phys.uva.nl
   Olly Betts			olly@muscat.co.uk
