* README-alpha: Another instance of anon cvs location.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-20  Eric Blake  <ebb9@byu.net>
+
+	* README-alpha: Another instance of anon cvs location.
+
 2005-12-19  Eric Blake  <ebb9@byu.net>
 
 	* README-alpha: Update anon cvs location.
